--- a/src/global-syles/vars.css
+++ b/src/global-syles/vars.css
@@ -1,11 +1,12 @@
-:root, root.light {
-    color-scheme: light;
-    --bg-primary: #f5f5f5;
-    --bg-secondary: #4b4b4b;
+:root,
+root.light {
+  color-scheme: light;
+  --bg-primary: #f5f5f5;
+  --bg-secondary: #4b4b4b;
 }
 
 :root.dark {
-    color-scheme: dark;
-    --bg-primary: #181818;
-    --bg-secondary: #333;
+  color-scheme: dark;
+  --bg-primary: #181818;
+  --bg-secondary: #333;
 }
