--- a/src/global-syles/vars.css
+++ b/src/global-syles/vars.css
@@ -1,12 +1,18 @@
 :root,
 root.light {
-    color-scheme: light;
+    --text-color : black;
     --bg-primary: #f5f5f5;
     --bg-secondary: #4b4b4b;
+
+    color-scheme: light;
+    color: var(--text-color);
 }
 
 :root.dark {
-    color-scheme: dark;
+    --text-color : white;
     --bg-primary: #181818;
     --bg-secondary: #333;
+
+    color-scheme: dark;
+    color: var(--text-color);
 }
