--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,5 +6,5 @@
     justify-content: end;
     padding: 1rem 2rem;
     background-color: var(--bg-secondary);
-    color: whitesmoke;
+    color: var(--text-emphasis);
 }
