--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -15,7 +15,7 @@
     margin: 0;
 }
 
-.nav > .navCheckBoxInput:checked ~ ul {
+.nav > .navCheckBoxInput:checked ~ .dropDownMenu {
     display: flex;
 }
 
@@ -23,7 +23,7 @@
     background-color: var(--bg-secondary);
 }
 
-.nav > input {
+.nav > input, .dropDownMenu {
     display: none;
 }
 
@@ -31,6 +31,22 @@
     fill: var(--text-color);
 }
 
+
+.dropDownMenu > fieldset {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.dropDownMenu > fieldset > legend {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.dropDownMenu > fieldset > label {
+    display: flex;
+    gap: 0.5rem;
+}
 .nav > ul {
     flex-direction: column;
     gap: 2rem;
