--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,55 +1,55 @@
 @import '../../global-syles/vars.css';
 
 .nav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0.5rem;
-    height: 100dvh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.5rem;
+  height: 100dvh;
 }
 
 .nav > ul {
-    display: none;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  display: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .nav > .navCheckBoxInput:checked ~ .dropDownMenu {
-    display: flex;
+  display: flex;
 }
 
 .nav:has(input:checked) {
-    background-color: var(--bg-secondary);
+  background-color: var(--bg-secondary);
 }
 
-.nav > input, .dropDownMenu {
-    display: none;
+.nav > input,
+.dropDownMenu {
+  display: none;
 }
 
 .navCheckBox {
-    fill: var(--text-color);
+  fill: var(--text-color);
 }
 
-
 .dropDownMenu > fieldset {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .dropDownMenu > fieldset > legend {
-    font-size: 1.5rem;
-    font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .dropDownMenu > fieldset > label {
-    display: flex;
-    gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 .nav > ul {
-    flex-direction: column;
-    gap: 2rem;
-    left: 0;
-    padding: 2rem 15px;
+  flex-direction: column;
+  gap: 2rem;
+  left: 0;
+  padding: 2rem 15px;
 }
