--- a/src/global-syles/index.css
+++ b/src/global-syles/index.css
@@ -1,7 +1,10 @@
 @import 'cssReset.css';
 @import 'vars.css';
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
 body {
   background-color: var(--bg-primary);
   transition: all 1s;
+
+  font-family: "JetBrains Mono", monospace;
 }
