--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -27,6 +27,9 @@
 .nav > .navCheckBoxInput:checked ~ .dropDownMenu {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem 0;
   opacity: 1;
   animation-name: appearFromLeft;
   animation-duration: 800ms;
