--- a/src/pages/Index/Index.module.css
+++ b/src/pages/Index/Index.module.css
@@ -1,11 +1,6 @@
 @import url('../../global-styles/vars.css');
 
 .index {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: #282c34;
-  color: white;
+  display: grid;
+  place-items: center;
 }
