--- a/src/global-styles/vars.css
+++ b/src/global-styles/vars.css
@@ -1,9 +1,9 @@
 :root,
 root.light {
   --text-color: black;
-  --text-emphasis: orange;
+  --text-emphasis: #ffbd3d;
   --bg-primary: #f5f5f5;
-  --bg-secondary: #858484;
+  --bg-secondary: #333333;
 
   color-scheme: light;
   color: var(--text-color);
@@ -11,9 +11,9 @@ root.light {
 
 :root.dark {
   --text-color: white;
-  --text-emphasis: purple;
+  --text-emphasis: #ff6bfc;
   --bg-primary: #181818;
-  --bg-secondary: #333;
+  --bg-secondary: #1c1c1c;
 
   color-scheme: dark;
   color: var(--text-color);
